2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix maintainer-check fallout.
	* tests/compile2.test: Use `Exit', not `exit'.

2009-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Extract correct man section from files in man_MANS.
	* lib/am/mans.am: Extract correct man section in the presence of
	multiple dots in the file base name and/or directory components.
	* tests/man5.test: New test case.
	* tests/Makefile.am: Update.

2009-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (maintainer-mode): Fix logic in
	AM_MAINTAINER_MODE description.
	* THANKS: Update.
	Report by Daniel Kahn Gillmor.

2009-03-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Change conffile name to `.gnuploadrc'.

2009-03-04  William Pursell  <bill.pursell@gmail.com>

	Replace bare `automake' with `@command{automake}' or `Automake'.
	* doc/automake.texi: Avoid bare `automake' in the manual,
	replacing occurrences with `@command{automake}' when the command
	is meant, and `Automake' when speaking about the software
	package in general.

2009-03-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/depcomp: Various portability and quoting nits.

	reformat gnupload script.
	* lib/gnupload: Reformat and reindent.

	gnupload touchups.
	* lib/gnupload (conffile): New variable.  Use throughout.
	(dry_run): Use `false' and `:' values.  Show, don't execute,
	gpg signing commands upon --dry-run.
	(usage): Typo and formatting fixes.  Mention that commands are
	applied in order.
	(argument loop): Factorize a bit, fix quoting.
	(dprint, mkdirective, mksymlink, upload): Formatting and
	portability fixes.

2009-03-04  Sergey Poznyakoff  <gray@gnu.org>

	Various gnupload improvements.
	Add support for uploading to download.gnu.org.ua.
	Add support for a .gnupload configuration file.
	Support creating and removing symlinks.
	Allow for several operations in a single invocation.
	Add debugging features.