@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2008  Free Software Foundation, Inc.
+# Copyright (C) 2008, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -39,7 +39,9 @@ END
 $ACLOCAL
 $AUTOMAKE
 $AUTOCONF
-./configure --disable-dependency-tracking 2>stderr || { cat stderr >&2; Exit 1; }
+./configure --disable-dependency-tracking 2>stderr || {
+  stat=$?; cat stderr >&2; Exit $stat;
+}
 cat stderr >&2
 grep shift stderr && Exit 1
 :
