@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2002, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -38,6 +38,6 @@ END
 $ACLOCAL || Exit 1
 $AUTOMAKE || Exit 1
 $AUTOCONF || Exit 1
-./configure || Exit 1
+./configure || Exit $?
 
 test -f .deps/fx64.Po
